<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.rictacius.draftpad.Dashboard"
    tools:showIn="@layout/activity_dashboard">

    <LinearLayout
        android:id="@+id/Dash_notLoadedLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="invisible">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/dash_notLoadedError"
            app:srcCompat="@drawable/ic_error_black_48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/dash_notLoaded"
            android:textAlignment="center"
            android:textColor="@color/colorTextPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/dash_notLoadedHelp"
            android:textAlignment="center"
            android:textColor="@color/colorTextPrimary" />

        <TextView
            android:id="@+id/Dash_errorCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/dash_errorCode"
            android:textAlignment="center"
            android:textColor="@color/colorTextPrimary" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Dash_noNotesLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/dash_emptyList"
            app:srcCompat="@drawable/ic_inbox_black_48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/dash_noNotes"
            android:textAlignment="center"
            android:textColor="@color/colorTextPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/dash_noNotesHelp"
            android:textAlignment="center"
            android:textColor="@color/colorTextPrimary" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/Dash_notesRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</FrameLayout>
