<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rictacius.draftpad.AboutActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/ND_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_name"
                android:textAllCaps="false"
                android:textColor="@color/colorTextSecondary"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_defaultDesc"
                android:textAlignment="center"
                android:textColor="@color/colorTextSecondary" />

            <View
                android:id="@+id/view"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@color/colorTextSecondary" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="@string/app_author"
                android:textAllCaps="true"
                android:textColor="@color/colorTextSecondary"
                android:textStyle="normal|bold|italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/view1"
                    android:layout_width="94dp"
                    android:layout_height="88dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/app_author"
                    app:srcCompat="@mipmap/victor_profile_image" />

                <TextView
                    android:id="@+id/about_txtAboutMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/about_aboutMe"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextSecondary" />

            </LinearLayout>

            <TextView
                android:id="@+id/about_visitWebsite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/about_visitWebsite"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/colorTextSecondary"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/view2"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="start"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/twitter"
                    android:onClick="twitterClick" />

                <ImageView
                    android:id="@+id/view3"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/github"
                    android:onClick="gitHubClick" />

                <ImageView
                    android:id="@+id/view4"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="end"
                    android:background="@drawable/email"
                    android:onClick="emailClick" />

            </LinearLayout>

            <View
                android:id="@+id/view5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@color/colorTextSecondary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/about_creditsTitle"
                android:textColor="@color/colorTextSecondary"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="0.6"
                    android:orientation="vertical"
                    android:weightSum="0.6">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/aboutCredits_afabTitle"
                        android:textColor="@color/colorTextSecondary"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/aboutCredits_afabAuthor"
                        android:textColor="@color/colorTextMuted"
                        android:textSize="14sp" />

                </LinearLayout>

                <Button
                    android:id="@+id/about_creditsAFAB"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.4"
                    android:text="@string/about_creditsGitHub" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
