<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:horizontalSpacing="0dp"
            android:orientation="vertical"
            android:rowCount="1"
            android:stretchMode="columnWidth"
            android:verticalSpacing="0dp">

            <TextView
                android:id="@+id/appbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/app_name"
                android:textColor="@color/colorText"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/appbar_more"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:background="@drawable/ic_more_vert_white_24dp"
                android:visibility="invisible" />

        </GridLayout>

        <GridLayout
            android:id="@+id/appbar_extra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:columnCount="2"
            android:horizontalSpacing="0dp"
            android:orientation="vertical"
            android:rowCount="1"
            android:stretchMode="columnWidth"
            android:verticalSpacing="0dp">

            <EditText
                android:id="@+id/appbar_extraText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="center_vertical"
                android:ems="10"
                android:hint="@string/appbar_extraTextHint"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:singleLine="false"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorTextHint" />

            <ImageView
                android:id="@+id/appbar_extraButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_columnWeight="1"
                android:layout_gravity="end|center_vertical"
                android:contentDescription="@string/appbar_Save"
                app:srcCompat="@drawable/ic_save_white_24dp" />

        </GridLayout>

    </android.support.v7.widget.Toolbar>

</LinearLayout>